<resources>
    <string name="app_name">DAA lab 4</string>
    <string name="actionGenerate">Generate</string>
    <string name="actionDeleteAll">Delete All</string>
    <string name="triMenu">Tri</string>
    <string name="triCreation">Creation date</string>
    <string name="triETA">ETA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_icon">type icon</string>
</resources>